--- a/clone-mod/styles.css
+++ b/clone-mod/styles.css
@@ -1,23 +1,34 @@
+:root {
+    --primary-color: #F5F5F5;
+    --secondary-color: #2C344A;
+    --focus-color: #CC6D52;
+    --bg-color: #0E132D
+}
+
 body {
     padding: 0;
     position: relative;
-    background-color: white;
+    background-color: var(--bg-color);
 
     font-family: "Poppins", sans-serif;
-    background: #e1e1e1;
 
     margin: 0;
 }
 
 header {
-    background-color: #1a2456;
+    background-color: var(--primary-color);;
     padding: 7.5px;
-    color: #efc2b3;
+    color: var(--secondary-color);;
     font-size: 12px;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    li:hover{ 
+        cursor: pointer;
+        color: var(--focus-color);
+    }
 }
 
 footer {
@@ -27,8 +38,13 @@ footer {
     justify-content: space-between;
     align-items: start;
 
-    background-color: #1a2456;
-    color: #efc2b3;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+
+    li:hover{ 
+        cursor: pointer;
+        color: var(--focus-color);
+    }
 }
 
 button {
@@ -75,7 +91,7 @@ ul {
     h1 {
         letter-spacing: 4px;
         font-size: 37.5px;
-        color: #efc2b3;
+        color: var(--primary-color);
         text-align: center;
         font-weight: 600;
         margin: 0;
@@ -83,7 +99,7 @@ ul {
 
     h2 {
         font-size: 18.75px;
-        color: #efc2b3;
+        color: var(--primary-color);
         text-align: center;
         font-weight: 300;
         margin: 0;
@@ -139,22 +155,37 @@ ul {
     flex-direction: column;
     align-items: center;
     gap: 7.5px;
+}
 
-    img {
-        width: 100%;
-        max-height: 380px;
-        object-fit: cover;
-    }
+.last-product-img {
+    width: 100%;
+    height: 380px;
+    background-image: url("https://cdn.shopify.com/s/files/1/0974/7950/files/Monogram_Keyboard_Multipad-v2_1920x1300_crop_center.png.webp?v=1711651403");
+    background-size: cover;
+    background-position: center;
+}
 
+.last-product-img:hover {
+    background-image: url("https://cdn.shopify.com/s/files/1/0974/7950/files/Monogram_Keyboard_2_878639a5-2865-4c4f-a21e-498f3a3db3b8_750x422_crop_center.jpg?v=1712087494");
+    cursor: pointer;
 }
 
 .product-img {
     width: 467.5px;
+    min-height: 312px;
+
+    background-image: url("https://cdn.shopify.com/s/files/1/0974/7950/products/Packaging_MasterClosedBracket1_Monogram_May20204494_1920x1280_crop_center.jpg.webp?v=1623682600");
+    background-size: cover;
+}
+
+.product-img:hover {
+    cursor: pointer;
+    background-image: url("https://cdn.shopify.com/s/files/1/0974/7950/products/Everyday-Bundle-Mocks-horizontal_750x500_crop_center.jpg?v=1668446709");
 }
 
 .product-title {
     margin: 0;
-    color: #1a2456;
+    color: var(--primary-color);;
     font-size: 18.75px;
     font-weight: 600;
 }
@@ -168,7 +199,7 @@ ul {
 .product-description {
     width: 100%;
     font-size: 13.5px;
-    color: #1a2456;
+    color: var(--primary-color);;
     text-align: start;
     margin: 0;
 }
@@ -180,18 +211,19 @@ ul {
     padding: 7.5px 15px; 
     margin-left: 3.75px; 
     
-    background-color: #ff8d6b; 
+    background-color: var(--focus-color); 
     
-    color: #212529; 
+    color: #2C344A; 
     font-size: 12.375px; 
     font-weight: 600;
 }
 
 .banner {
     width: 100%;
-    height: 506.25px;
+    height: 600px;
     background-image: url("./images/shop-banner-module.webp");
     background-size: cover;
+    background-position: center;
 
     padding-top: 48px;
 
@@ -202,7 +234,7 @@ ul {
 
     h1 {
         font-size: 37.5px;
-        color: #1a2456;
+        color: var(--primary-color);;
         font-weight: 600;
         margin: 0 0 15px 0;
         text-transform: uppercase;
@@ -210,7 +242,7 @@ ul {
 
     h2 {
         font-size: 18.75px;
-        color: #1a2456;
+        color: var(--primary-color);;
         font-weight: 300;
         margin: 0 0 15px 0;
     }
@@ -247,13 +279,13 @@ ul {
 
     input {
         background-color: transparent;
-        border: 1px solid #efc2b3;
+        border: 1px solid var(--secondary-color);
         padding: 3.75px 7.5px;
         margin: 0 7.5px 0 0;
     }
 
     button {
-        background-color: #efc2b3;
+        background-color: var(--secondary-color);
         color: #212529;
         padding: 5.625px 26.25px;
         border-radius: 50rem;
@@ -280,14 +312,14 @@ ul {
     justify-content: center;
     padding: 6.75px;
     border-radius: 100%;
-    background-color: #efc2b3;
+    background-color: var(--secondary-color);
 
     svg {
         width: 13.5px;
         height: 13.5px;
         
         path {
-            fill: #1a2456;
+            fill: var(--primary-color);;
         }
     }
 }
